--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         src="https://images.pexels.com/photos/3062545/pexels-photo-3062545.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=750&w=1260"
         alt="movie-image"
       />
-      <h1>Movie Title</h1>
+      <h1>{ Movie Title }</h1>
       <p>
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum iste
         necessitatibus porro explicabo illo dolorum dolores cupiditate non modi
@@ -29,9 +29,9 @@
       <button class="btn">Watch now</button>
     </div>
     <div class="trailer-container active">
-      <video src="trailer.mp4" controls="true"></video>
+      <video src="/video/trailer.mp4" controls="true"></video>
       <i class="fas fa-times fa-2x close-icon"></i>
     </div>
-    <script src="index.js"></script>
+    <script src="script.js"></script>
   </body>
 </html>
